src/objects/zqu__QuoteRatePlanCharge__c.object
<CustomObject>
    <description>A QuoteRatePlanCharge, like QuoteRatePlan, is part of a Quote.</description>
    <fields>
        <fullName>AccountSSEmail__c</fullName>
        <formula>zqu__QuoteRatePlan__r.zqu__Quote__r.zqu__Account__r.Strategy_Specialist__r.Email</formula>
        <label>Account SS Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryTier__c</fullName>
        <label>Category Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category_Taxonomy_ID__c</fullName>
        <description>SF-1821</description>
        <label>Category Taxonomy ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Bands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridal Salons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caterers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DJs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hair, Makeup &amp; Wellness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invitations and Stationers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Officiants &amp; Counselors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Party Rentals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photographers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Categories*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Videographers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wedding Cakes and Desserts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wedding Florists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wedding Planners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wedding Rings &amp; Fine Jewelry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wedding Venues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Knot - Bands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Knot - Bridal Salons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Knot - Caterers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Knot - DJs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Knot - Hair, Makeup &amp; Wellness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Knot - Invitations and Stationers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Knot - Officiants &amp; Counselors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Knot - Party Rentals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Knot - Photographers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Knot - Secondary Categories*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Knot - Videographers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Knot - Wedding Cakes and Desserts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Knot - Wedding Florists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Knot - Wedding Planners</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Compare_TCV_and_True_TCV__c</fullName>
        <formula>zqu__TCV__c = True_TCV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compare TCV and True TCV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiscountOverrideModified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SF-1336. Required in the ZuoraQuoteSelectProductDetailsController to track when the Discount_Override__c field should not default to the zqu__Discount__c / Steelbrick_Calculated_Discount__c field value.</description>
        <label>DiscountOverrideModified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiscountPrice__c</fullName>
        <label>Discount Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <formula>zqu__EffectivePrice__c - zqu__ListPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Override__c</fullName>
        <description>If the sales rep chooses to give a different discount % than what was calculated by Steelbrick, the &quot;custom&quot; discount amount is entered here.</description>
        <inlineHelpText>If the sales rep chooses to give a different discount % than what was calculated by Steelbrick, the &quot;custom&quot; discount amount is entered here.</inlineHelpText>
        <label>Discount Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Reason__c</fullName>
        <description>SF-1336. Used on the &quot;Edit Line Items&quot; page in the Quote creation workflow if the sales rep enters a higher discount % than what was calculated by Steelbrick.  
Reference: If you are making any changes to the picklist values, Please make a change for the same field on Quote Rate Plan Object as well. Also, Please make sure that your change is reflected in zuora, in the exact same way(Even A space can break the sync).</description>
        <inlineHelpText>Used on the &quot;Edit Line Items&quot; page in the Quote creation workflow if the sales rep enters a higher discount % than what was calculated by Steelbrick.</inlineHelpText>
        <label>Discount Reason</label>
        <picklist>
            <picklistValues>
                <fullName>None-Autocalculated Discount</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Make Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate Freeze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSD Discretionary Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wedding Wire Switch Pitch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blitz</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Effective_Amount__c</fullName>
        <formula>zqu__EffectivePrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Possible_Renewal__c</fullName>
        <description>CSP-1869 | if the Opportunity Type is &quot;Renewal&quot; this picklist is set to &quot;Yes&quot; through trigger code</description>
        <inlineHelpText>CSP-1869 | if the Opportunity Type is &quot;Renewal&quot; this picklist is set to &quot;Yes&quot; through trigger code</inlineHelpText>
        <label>Is Possible Renewal</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDE_Email_Launch_Date__c</fullName>
        <description>The day that LDE (direct marketing) emails are sent out. SF-1555.</description>
        <inlineHelpText>The day that LDE (direct marketing) emails are sent out.</inlineHelpText>
        <label>LDE Email Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>List_Amount__c</fullName>
        <formula>zqu__ListPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationVendorDynamicsAccountID__c</fullName>
        <label>LocationVendorDynamicsAccountID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Vendor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Location/Vendor account that we are selling this product for.  For example if selling a storefront, select the location that this product will be fulfilled against.</inlineHelpText>
        <label>Location/Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quote Rate Plan Charges</relationshipLabel>
        <relationshipName>Quote_Rate_Plan_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_ID__c</fullName>
        <description>SF-1821</description>
        <label>Market ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>AK - Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL - Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR - Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ - Phoenix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ - Tucson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Central CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Los Angeles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Orange County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Palm Springs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Sacramento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - San Diego</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - San Francisco/Bay Area/Northern CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Santa Barbara/Ventura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN - Toronto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO - Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT - Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC - Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL - Central FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL - Northern FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL - South FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL - West Coast FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA - Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA - Savannah/Coastal GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI - Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA - Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID - Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL - Central IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL - Chicago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL - Chicago Suburbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN - Indiana</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Charges__c</fullName>
        <label>Number of Charges</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <formula>LEFT(zqu__QuoteRatePlan__r.zqu__Quote__r.zqu__Opportunity__r.Id,15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OpportunityId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentPlan__c</fullName>
        <label>Payment Plan</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Period_equals_Preferred_Payment_Schedule__c</fullName>
        <formula>TEXT( zqu__Period__c ) =  Preferred_Payment_Schedule__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period equals Preferred Payment Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Payment_Schedule__c</fullName>
        <formula>BLANKVALUE(TEXT( zqu__QuoteRatePlan__r.zqu__Quote__r.Preferred_Payment_Schedule__c ), &apos;Month&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preferred Payment Schedule</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Issue_Id__c</fullName>
        <label>Print Issue Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Issue__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Print Issue that applies to a given product on a quote</inlineHelpText>
        <label>Print Issue</label>
        <referenceTo>Print_Issue__c</referenceTo>
        <relationshipLabel>Quote Rate Plan Charges</relationshipLabel>
        <relationshipName>Quote_Rate_Plan_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Print_Issue_name__c</fullName>
        <formula>Print_Issue__r.Short_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Print Issue name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_issue_short_descriotion__c</fullName>
        <formula>Print_Issue__r.Short_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Print issue short descriotion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductCategory__c</fullName>
        <label>Product Category</label>
        <picklist>
            <picklistValues>
                <fullName>Storefront</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Addon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Storefront</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>zqu__QuoteRatePlan__r.zqu__ProductRatePlan__r.zqu__Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Rate_Plan_ID__c</fullName>
        <description>The ID of the associated Product Rate Plan.</description>
        <formula>zqu__QuoteRatePlan__r.zqu__ProductRatePlan__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Rate Plan ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <description>SF-612</description>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Id__c</fullName>
        <formula>zqu__QuoteRatePlan__r.zqu__Quote__r.Id</formula>
        <inlineHelpText>The Salesforce ID for the associated Quote</inlineHelpText>
        <label>Quote Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Rate_Plan_Amendment_Type__c</fullName>
        <description>CSP-1822</description>
        <formula>TEXT(zqu__QuoteRatePlan__r.zqu__AmendmentType__c)</formula>
        <label>Quote Rate Plan Amendment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Rate_Plan_ID__c</fullName>
        <description>A textfield that captures the ID of the parent Quote Rate Plan in order to sync it to the resulting Subscription Product Charge record. Created specifically for Inventory management, could potentially also be used for Fulfillment purposes.</description>
        <label>Quote Rate Plan ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Start_Date__c</fullName>
        <formula>zqu__QuoteRatePlan__r.zqu__Quote__r.zqu__StartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RSD_Id__c</fullName>
        <label>RSD Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenewalRepID__c</fullName>
        <label>RenewalRepID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesRepID__c</fullName>
        <label>SalesRepID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceRunDatesTemplateMergeField__c</fullName>
        <description>CSP-868 | used to fill in the &quot;Service Run Dates&quot; column of the Zuora Quote template</description>
        <inlineHelpText>CSP-868 | used to fill in the &quot;Service Run Dates&quot; column of the Zuora Quote template</inlineHelpText>
        <label>ServiceRunDatesTemplateMergeField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Steelbrick_Calculated_Discount__c</fullName>
        <description>The discount percent calculated by the Steelbrick Price Rules during the &quot;Add Products and Charges&quot; step of the Quote creation workflow.</description>
        <inlineHelpText>The discount percent calculated by the Steelbrick Price Rules during the &quot;Add Products and Charges&quot; step of the Quote creation workflow.</inlineHelpText>
        <label>Steelbrick Calculated Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Discount__c</fullName>
        <inlineHelpText>The total discount dollar amount over the course of the subscription</inlineHelpText>
        <label>Total Contract Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>True_TCV__c</fullName>
        <description>CSP-1334</description>
        <label>True TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Venue_Name__c</fullName>
        <label>Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora_Id_of_Migrated_Charge__c</fullName>
        <description>This Field is used to get populated by zuora Id of migrated charge. Copy down the value from QRP to QRPC.</description>
        <label>Zuora Id of Migrated Charge</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Apply_Discount_To_One_Time_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Discount To One Time Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Apply_Discount_To_Recurring_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Discount To Recurring Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Apply_Discount_To_Usage_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Discount To Usage Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__BillCycleDay__c</fullName>
        <description>Bill Cycle Day of RatePlan Charge</description>
        <label>Bill Cycle Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__BillCycleType__c</fullName>
        <label>Bill Cycle Type</label>
        <picklist>
            <picklistValues>
                <fullName>DefaultFromCustomer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SpecificDayofMonth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SubscriptionStartDay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ChargeTriggerDay</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__BillingDiscount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__BillingPeriodAlignment__c</fullName>
        <label>Billing Period Alignment</label>
        <picklist>
            <picklistValues>
                <fullName>AlignToCharge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AlignToSubscriptionStart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AlignToTermStart</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__BillingSubtotal__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__BillingTax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__BillingTiming__c</fullName>
        <label>Billing Timing</label>
        <picklist>
            <picklistValues>
                <fullName>In Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Arrears</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__BillingTotal__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__ChargeNumber__c</fullName>
        <label>Charge Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ChargeOverrideReferenceId__c</fullName>
        <description>The Id of another Quote Rate Plan Charge in the order that this charge is acting on.</description>
        <label>Charge Override Reference Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ChargeType__c</fullName>
        <label>Charge Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Currency__c</fullName>
        <label>Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaDiscountMRR__c</fullName>
        <description>Delta Discount MRR value retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Delta Discount MRR value retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta Discount MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaDiscountTCBTax__c</fullName>
        <description>Tax on Delta Discount TCB retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Tax on Delta Discount TCB retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta Discount TCB Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaDiscountTCB__c</fullName>
        <description>Delta Discount TCB value retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Delta Discount TCB value retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta Discount TCB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaDiscountTCV__c</fullName>
        <description>Delta Discount TCV value retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Delta Discount TCV value retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta Discount TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaMRR__c</fullName>
        <description>Delta MRR value calculated by previewing the quote from Zuora</description>
        <inlineHelpText>Delta MRR value calculated by previewing the quote from Zuora</inlineHelpText>
        <label>Delta MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaTCBTax__c</fullName>
        <description>Tax on Delta TCB returned from previewing the Quote in Zuora</description>
        <inlineHelpText>Tax on Delta TCB returned from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta TCB Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaTCB__c</fullName>
        <description>Delta TCB value retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Delta TCB value retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta TCB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaTCV__c</fullName>
        <description>Delta TCV value calculated by previewing the quote from Zuora</description>
        <inlineHelpText>Delta TCV value calculated by previewing the quote from Zuora</inlineHelpText>
        <label>Delta TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zqu__DiscountAmount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DiscountPercentage__c</fullName>
        <label>Discount Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Discount_Level__c</fullName>
        <label>Discount Level</label>
        <picklist>
            <picklistValues>
                <fullName>RatePlan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>zqu__EffectiveEndDate__c</fullName>
        <description>The effective end date of the charge.</description>
        <inlineHelpText>The effective end date of the charge.</inlineHelpText>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__EffectivePrice__c</fullName>
        <label>Effective Price</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__EffectiveStartDate__c</fullName>
        <description>The effective start date of the charge.</description>
        <inlineHelpText>The effective start date of the charge.</inlineHelpText>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__EndDateCondition__c</fullName>
        <label>End Date Condition</label>
        <picklist>
            <picklistValues>
                <fullName>Subscription End Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specific End Date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__EntityID__c</fullName>
        <formula>zqu__QuoteRatePlan__r.zqu__EntityID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__FeeType__c</fullName>
        <label>FeeType</label>
        <picklist>
            <picklistValues>
                <fullName>Flat Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>n/a</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__IncludedUnits__c</fullName>
        <label>Included Units</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__IsLastSegment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A flag that determines whether the existing Quote Rate Plan Charge belongs to the latest segment.</description>
        <inlineHelpText>A flag that determines whether the existing Quote Rate Plan Charge belongs to the latest segment.</inlineHelpText>
        <label>Is Last Segment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__ListPriceBase__c</fullName>
        <label>List Price Base</label>
        <picklist>
            <picklistValues>
                <fullName>Per Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Billing Period</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>